--- a/compose.html
+++ b/compose.html
@@ -104,7 +104,7 @@
           .pauseFor(300)
           .typeString('หากคุณจะทำงานให้เป็นระบบคุณควรทำงานเหมือนการเขียนโปรแกรมคอมพิวเตอร์ เพราะถ้าหากขาดสิ่งใดสิ่งหนึ่งไปแม้แต่ตัวเดียวงานที่ทำอยู่ก็ไม่สามารถดำเนินการต่อไปได้ เปรียบเหมือนการทำงานหากไม่มีความสามัคคีหรือไม่ได้วางแผนงานที่ทำก็ไม่สามารถไปต่อได้ การทำงานแบบการเขียนโปรแกรมคอมพิวเตอร์จึงเป็นตัวขับเคลื่อนไปสู่ความสำเร็จ')
           .pauseFor(300)
-          .typeString ('<div class="last-box"><div><img src="img/name-bunyait.jpg" width="200px" heigh="auto"> <br>ผู้จัดทำ</div></div>')
+          .typeString ('<div class="last-box"><div><img src="images/name-bunyait.jpg" width="200px" heigh="auto"> <br>ผู้จัดทำ</div></div>')
           .pauseFor(300)
           .start()
 
