--- a/compose.html
+++ b/compose.html
@@ -50,12 +50,18 @@
         }
 
         @media(max-width: 768px){
-            #app{
-                padding: 0px;
+            #app {
+                padding: 2rem;
                 max-width: 100%;
+                width: 100%;
             }
-            body{
-                padding: 50%;
+
+            body {
+                padding: 20px;
+            }
+
+            div {
+                  border: 4px solid #99A1E9;
             }
         }
         
