--- a/book.html
+++ b/book.html
@@ -91,7 +91,7 @@
           .pauseFor(300)
           .typeString(' กระผมจึงได้ปรึกษาครูอาจารย์ รุ่นพี่ บุคคลที่มีความรู้ความเข้าใจในสาขานี้เกี่ยวกับคณะวิศวกรรมศาสตร์ สาขาวิศวกรรมโลจิสติกส์ ว่าเรียนเกี่ยวกับอะไรบ้าง ต้องมีทักษะอะไรบ้าง รวมถึงเมื่อเรียนจบไปสามารถประกอบอาชีพใดได้บ้าง <br>')
           .pauseFor(300)
-          .typeString('กระผมได้ถามถึงมหาวิทยาลัยที่มีชื่อเสียงในด้านนี้ ทุกคนต่างแนะนำกระผมเป็นเสียงเดียวกันว่า มหาวิทยาลัยเกษตรศาสตร์ วิทยาเขตกำแพงแสน มีความเป็นเลิศในด้านนี้ คำแนะนำของทุกคนทำให้จุดประกายความฝันของผมในการที่จะเข้าศึกษาต่อที่มหาวิทยาลัยเกษตรศาสตร์')
+          .typeString('กระผมได้ถามถึงมหาวิทยาลัยที่มีชื่อเสียงในด้านนี้ ทุกคนต่างแนะนำกระผมเป็นเสียงเดียวกันว่า มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี มีความเป็นเลิศในด้านนี้ คำแนะนำของทุกคนทำให้จุดประกายความฝันของผมในการที่จะเข้าศึกษาต่อที่มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี')
           .pauseFor(300)
           .typeString(' เป็นอย่างมากเป้าหมายของกระผมนั้นสนใจที่จะอยากจะเป็นส่วนหนึ่งของการวางแผนการขนส่งระหว่างประเทศและสร้างเทคโนโลยีใหม่ๆด้วยการเขียนโปรแกรมคอมพิวเตอร์  เพื่อให้คนที่ได้ใช้เกิดประโยชน์ ความสนุกและความเพลิดเพลิน กระผมนั้นเชื่อว่าตัวกระผมมีความสามารถในการเรียนคณะนี้ เพราะ กระผมมีความชอบและอดทนในการทำงาน เป็นคนที่ชอบสังเกต รวมถึงการที่ตัวกระผมก่อนที่จะทำงานใดๆก็ตามจะมีการวางแผนก่อนเสมอทุกครั้ง ')
           .pauseFor(300)
