--- a/compose.html
+++ b/compose.html
@@ -96,9 +96,9 @@
 
           .typeString('กระผมได้ถามถึงมหาวิทยาลัยที่มีชื่อเสียงในด้านนี้ ทุกคนต่างแนะนำกระผมเป็นเสียงเดียวกันว่า')
           .pauseFor(300)
-          .typeString('มหาวิทยาลัยเกษตรศาสตร์ มีความเป็นเลิศในด้านนี้ คำแนะนำของทุกคนทำให้จุดประกายความฝันของผมในการที่จะเข้าศึกษาต่อที่')
+          .typeString('มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี มีความเป็นเลิศในด้านนี้ คำแนะนำของทุกคนทำให้จุดประกายความฝันของผมในการที่จะเข้าศึกษาต่อที่')
           .pauseFor(300)
-          .typeString('มหาวิทยาลัยเกษตรศาสตร์ เป็นอย่างมากเป้าหมายของกระผมนั้นสนใจที่จะอยากสร้างเทคโนโลยีใหม่ๆด้วยการ')
+          .typeString('มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรีเป็นอย่างมากเป้าหมายของกระผมนั้นสนใจที่จะอยากสร้างเทคโนโลยีใหม่ๆด้วยการ')
           .pauseFor(300)
           .typeString('เขียนโปรแกรมคอมพิวเตอร์  เพื่อให้คนที่ได้ใช้เกิดประโยชน์ ความสนุกและความเพลิดเพลิน กระผมนั้นเชื่อว่าตัวกระผมมี')
           .pauseFor(300)
