--- a/compose.html
+++ b/compose.html
@@ -87,7 +87,7 @@
           .pauseFor(300)
           .typeString('ตอนนั้นผมได้ตื่นตาตื่นใจมาก ทำให้กระผมเริ่มศึกษาเกี่ยวกับอาชีพโปรแกรมเมอร์อย่างจริงจังและได้เจอกับคณะที่ผมฝันไว้')
           .pauseFor(300)
-          .typeString('ในวัยเด็กคือ คณะวิทยาศาสตร์ สาขาวิทยาการคอมพิวเตอร์  กระผมจึงได้ปรึกษาครูอาจารย์ รุ่นพี่ บุคคลที่มีความรู้ความเข้าใจ')
+          .typeString('ในวัยเด็กคือ คณะเทคโนโลยีสารสนเทศ สาขาเทคโนโลยีสารสนเทศ กระผมจึงได้ปรึกษาครูอาจารย์ รุ่นพี่ บุคคลที่มีความรู้ความเข้าใจ')
           .pauseFor(300)
           .typeString('ในสาขานี้เกี่ยวกับคณะและสาขาว่าเรียนเกี่ยวกับอะไรบ้าง ต้องมีทักษะอะไรบ้าง รวมถึงเมื่อเรียนจบไปสามารถประกอบ')
           .pauseFor(300)
