--- a/compose1.html
+++ b/compose1.html
@@ -82,11 +82,11 @@
           .pauseFor(400)
           .typeString('ย้อนกลับไปเมื่อตอนที่กระผมยังเป็นเด็กกระผมได้อ่านหนังสือเกี่ยวกับอาชีพในฝันและได้สะดุดเจอกับอาชีพ')
           .pauseFor(300)
-          .typeString('โปรแกรมเมอร์ ตอนนั้นกระผมเองก็ไม่รู้ว่าอาชีพนี้ทำอะไรได้บ้างต่างได้แต่คิดและสงสัย จนกระทั่งเริ่มโตขึ้นมาได้ดูรายการทีวี')
+          .typeString('ครู ตอนนั้นกระผมเองก็ไม่รู้ว่าอาชีพนี้ทำอะไรได้บ้างต่างได้แต่คิดและสงสัย จนกระทั่งเริ่มโตขึ้นมาได้ดูรายการทีวี')
           .pauseFor(300)
           .typeString('รายการนึงที่เขากำลังเขียนโปรแกรมคอมพิวเตอร์ในการทำให้หุ่นยนต์ขยับไปด้านหน้าหรือการที่ทำให้หุ่นยนต์ขยับตัวได้')
           .pauseFor(300)
-          .typeString('ตอนนั้นผมได้ตื่นตาตื่นใจมาก ทำให้กระผมเริ่มศึกษาเกี่ยวกับอาชีพโปรแกรมเมอร์อย่างจริงจังและได้เจอกับคณะที่ผมฝันไว้')
+          .typeString('ตอนนั้นผมได้ตื่นตาตื่นใจมาก ทำให้กระผมเริ่มศึกษาเกี่ยวกับอาชีพครูอย่างจริงจังและได้เจอกับคณะที่ผมฝันไว้')
           .pauseFor(300)
           .typeString('ในวัยเด็กคือ คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี สาขาวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย กระผมจึงได้ปรึกษาครูอาจารย์ รุ่นพี่ บุคคลที่มีความรู้ความเข้าใจ')
           .pauseFor(300)
