--- a/compose1.html
+++ b/compose1.html
@@ -107,7 +107,7 @@
           .pauseFor(300)
           .typeString('ก่อนที่จะทำงานใดๆก็ตามจะมีการวางแผนก่อนเสมอทุกครั้ง ทำให้การทำงานนั้นเป็นระบบ มีความคิดสร้างสรรค์และมีความสามัคคีในหมู่คณะ ')
           .pauseFor(300)
-          .typeString('ณ ตอนนี้ทำให้ผมได้รู้ว่าอาชีพโปรแกรมเมอร์นั้นเป็นอาชีพที่สำคัญที่จะช่วยให้เกิดความก้าวหน้าทางเทคโนโลยี แต่ไม่เพียงที่จะมีความรู้ความสามารถอย่างเดียว ต้องมีความซื่อสัตย์และคุณธรรมในการประกอบอาชีพนั้นๆด้วย')
+          .typeString('ณ ตอนนี้ทำให้ผมได้รู้ว่าอาชีพครูนั้นเป็นอาชีพที่สำคัญที่จะช่วยให้เกิดความก้าวหน้าทางเทคโนโลยี แต่ไม่เพียงที่จะมีความรู้ความสามารถอย่างเดียว ต้องมีความซื่อสัตย์และคุณธรรมในการประกอบอาชีพนั้นๆด้วย')
           .pauseFor(300)
           .typeString('หากคุณจะทำงานให้เป็นระบบคุณควรทำงานเหมือนการเขียนโปรแกรมคอมพิวเตอร์ เพราะถ้าหากขาดสิ่งใดสิ่งหนึ่งไปแม้แต่ตัวเดียวงานที่ทำอยู่ก็ไม่สามารถดำเนินการต่อไปได้ เปรียบเหมือนการทำงานหากไม่มีความสามัคคีหรือไม่ได้วางแผนงานที่ทำก็ไม่สามารถไปต่อได้ การทำงานแบบการเขียนโปรแกรมคอมพิวเตอร์จึงเป็นตัวขับเคลื่อนไปสู่ความสำเร็จ')
           .pauseFor(300)
